[tool.poetry]
name = "tg-reactions"
version = "0.1.0"
description = ""
authors = ["akshin-autods <agshin@autods.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
telethon = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
